--- a/Web.config
+++ b/Web.config
@@ -19,6 +19,8 @@
    providerName="System.Data.SqlClient" />
   <add name="db_quantrimamnonConnectionString" connectionString="Data Source=103.90.233.59,1433;Initial Catalog=db_quantrimamnon;User ID=quantrimamnon"
    providerName="System.Data.SqlClient" />
+  <add name="hethongquanlitreConnectionString" connectionString="Data Source=duanphuhuynhquanlytre.database.windows.net;Initial Catalog=hethongquanlitre;Persist Security Info=True;User ID=laibich;Password=Lai210702@"
+   providerName="System.Data.SqlClient" />
  </connectionStrings>
 	<system.web>
 		<httpHandlers>
